// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButton renders as expected when passing a small size 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--text lab-btn--small"
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`TextButton renders as expected when passing a wallet icon 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--text lab-btn--normal"
    >
      <span
        class="lab-icon lab-icon--wallet lab-icon--white lab-icon--petit lab-btn__icon"
      />
       
      test
    </button>
  </div>
</body>
`;

exports[`TextButton renders as expected when passing a warning skin 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--text lab-btn--normal lab-btn--warning"
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`TextButton renders as expected when passing disabled as true 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--text lab-btn--normal"
      disabled=""
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`TextButton renders as expected when passing fullWidth prop 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--text lab-btn--normal lab-btn--block"
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`TextButton renders with base props 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--text lab-btn--normal"
    >
       
      test
    </button>
  </div>
</body>
`;
